[package]
name = "api-with-axum"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.8", features = ["headers"] }

serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"

sea-orm = { version = "0.11.0", features = [
  "sqlx-mysql",
  "runtime-tokio-native-tls",
  "macros",
  "with-chrono",
], default-features = true }
tracing = "0.1.37"
tokio = { version = "1.25.0", features = ["full"] }
anyhow = "1"
dotenv = "0.15"
jsonwebtoken = "8.2.0"
lazy_static = "1.4.0"
async-trait = "0.1.64"
async_once = "0.2.6"
serde_derive = "1.0.152"
config = "0.13.3"
tower-http = { version = "0.4.0", features = [
  "trace",
  "compression-br",
  "propagate-header",
  "sensitive-headers",
  "cors",
] }
http = "0.2.8"
bytes = "1.4.0"


[dev-dependencies]
assert-json-diff = "2.0.2"
reqwest = { version = "0.11.14", features = ["json"] }
